@@ -1,8 +1,13 @@
 PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 06 Aug 2015, PHP 7.0.0 Beta 3
+
 - Core:
   . Fixed bug #70106 (Inheritance by anonymous class). (Bob)
+
+- Opcache:
+  . Fixed bug #70111 (Segfault when a function uses both an explicit return
+    type and an explicit cast). (Laruence)
 
 23 Jul 2015, PHP 7.0.0 Beta 2
 
